--- a/src/views/relatorios.ejs
+++ b/src/views/relatorios.ejs
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Lista de Relatórios</title>
-</head>
-<body>
-  <h1>Relatórios</h1>
-  <ul>
-    <% for(let relatorio of relatorios) { %>
-      <li><%= relatorio.nome %></li>
-    <% } %>
-  </ul>
-</body>
-</html>
+<!-- views/relatorios.ejs -->
+<h1>Relatórios</h1>
+<ul>
+  <% relatorios.forEach(function(relatorio) { %>
+    <li><%= relatorio.nome %></li>
+  <% }); %>
+</ul>
